# resenet-cbam-Waste-Classification

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py  training_analysis.md
api/: main.py
api/static/css/: style.css
api/static/js/: script.js
api/templates/: index.html
docs/: architecture_details.md  paper_draft.md  penjelasan_cbam_resnet.md
models/: cbam_resnet.py
notebooks/: cbam_resnet_research.ipynb
src/: download_data.py  prepare_data.py  train.py
tests/: test_system.py
